--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "randombytes": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "rechoir": "^0.8.0",
     "resolve": "^1.22.1",
     "resolve-cwd": "^3.0.0",
@@ -101,6 +102,7 @@
     "@types/node": "^18.14.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
     "css-loader": "^6.7.3",
